--- a/app/views/clientes/_clientes_table.html.erb
+++ b/app/views/clientes/_clientes_table.html.erb
@@ -9,10 +9,7 @@
          <% clientes.each do |cliente| %>
          <tr>
             <td>
-               <div class="btn-group btn-group-sm">
-                  <%= link_to fa_icon("pencil"), edit_cliente_path(cliente), class: "btn btn-outline-primary btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Alterar' %>
-                  <%= link_to fa_icon("trash"), cliente_path(cliente), method: :delete, "data-confirm": 'Remover cliente?', class: "btn btn-outline-danger btn-xs", data: { toggle: "tooltip", placement: "top" },  title: 'Remover' %>
-               </div>
+            <%= link_to content_tag(:i,'' ,class: 'fe fe-edit'), edit_cliente_path(cliente), class: "icon", data: { toggle: "tooltip", placement: "top" },  title: 'Alterar' %>
             </td>
             <td>
                <%= cliente.nome %>
