--- a/app/views/clientes/_telefone_fields.html.erb
+++ b/app/views/clientes/_telefone_fields.html.erb
@@ -2,17 +2,13 @@
   <div class="control-group nested-fields">
     <div class="controls">
       <div class="row">
-        <div class="col-md-3 col-sm-3 col-lg-3">
+        <div class="col-md-10 col-sm-10 col-lg-10">
           <ul class="form-group list-unstyled">
+          
             <li>
-              <%= f.text_field :numero, class: 'form-control telefone', :placeholder => 'Número' %>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-3 col-sm-3 col-lg-3">
-          <ul class="form-group list-unstyled">
-            <li>
-              <%= link_to_remove_association fa_icon("trash"), f, class: 'btn btn-danger' %>
+             
+              <%= f.input :numero, input_html: {class: 'form-control telefone' }, :placeholder => 'Número' %>
+          <%= link_to_remove_association fa_icon('trash', text: 'Remover'), f, class: 'btn btn-outline-danger' %>
             </li>
           </ul>
         </div>
