--- a/app/views/minhas_empresas/index.html.erb
+++ b/app/views/minhas_empresas/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 <div class="card">
   <div class="card-body">
-<%= link_to( 'Novo', new_minha_empresa_path , class: "btn btn-outline-primary") %>
+<%= link_to( 'Novo', new_minha_empresa_path , class: "btn btn-primary") %>
 <br>
 <br>
 <div id="div_clientes_table">
