--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 <div class="card">
   <div class="card-body">
-<%= link_to( 'Novo', new_produto_path , class: "btn btn-outline-primary") %>
+<%= link_to( 'Novo', new_produto_path , class: "btn btn-primary") %>
 <br>
 <br>
 <div id="div_produtos_table">
