--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
     <title>MeuNegocio</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag 'https://fonts.googleapis.com/icon?family=Material+Icons', 'data-turbolinks-track': 'reload' %>
-    <%= stylesheet_link_tag 'https://use.fontawesome.com/releases/v5.0.6/css/all.css', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/icon?family=Material+Icons'%>
+    <%= stylesheet_link_tag 'https://use.fontawesome.com/releases/v5.0.6/css/all.css'%>
     <%= javascript_include_tag 'https://buttons.github.io/buttons.js', :defer => "defer", :async => 'async' %>
     
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application'%>
     <meta name="description" content="Gerenciador de fluxo de caixa">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="mobile-web-app-capable" content="yes">
@@ -32,15 +32,6 @@
         </main>
       </div>
     </div>
-    
-    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js' %>
-    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js' %>
-    <%= javascript_include_tag 'https://unpkg.com/shards-ui@latest/dist/js/shards.min.js' %>
-    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/Sharrre/2.0.1/jquery.sharrre.min.js' %>
-    <%= javascript_include_tag 'extras.1.1.0.min' %>
-    <%= javascript_include_tag 'shards-dashboards.1.1.0.min' %>
-    <%= javascript_include_tag 'app/app-blog-overview.1.1.0' %>
-    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.min.js' %>
     
   </body>
 </html>
