--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
                <a class="dropdown-item" href="<%= edit_user_registration_path%>">
                <i class="material-icons">&#xE7FD;</i> Editar conta</a>
                <div class="dropdown-divider"></div>
-               <a class="dropdown-item text-danger" href="<%= destroy_user_session_path%>">
+               <a class="dropdown-item text-danger" data-method="delete" href="<%= destroy_user_session_path%>">
                <i class="material-icons text-danger">&#xE879;</i> Sair </a>
             </div>
          </li>
