Melhorias na tela de login.

--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,3 +1,6 @@
+<div class="page-single">
+        <div class="container">
+
 <div class="d-flex justify-content-around">
   <div class="card login">
   <div class="card-header">
@@ -15,4 +18,6 @@
   <% end %>
   <%= render "users/shared/links" %>  </div>
   </div>
+  </div>
+</div>
 </div>
