--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="page-single">
+        <div class="container">
 <div class="page-header">
   <h1 class="page-title">Usuário
   </h1>
@@ -27,4 +29,6 @@
     <p>Tá triste? <%= button_to "Cancelar conta", registration_path(resource_name), data: { confirm: "Tem certeza?" }, method: :delete %></p>
   </div>
   -->
+</div>
+</div>
 </div>
