--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div class="page-single">
+        <div class="container">
 <div class="d-flex justify-content-around">
   <div class="card login">
    <div class="card-header">
@@ -18,4 +20,6 @@
   <% end %>
   <%= render "users/shared/links" %>
   </div>
+</div>
+</div>
 </div>
