--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="header py-4">
    <div class="container">
       <div class="d-flex">
-         <a class="header-brand" href="<%= root_path%>">
+         <a class="header-brand" href="<%= dashboard_index_path%>">
          Meu Negócio
          </a>
          <div class="d-flex order-lg-2 ml-auto">
