--- a/app/views/layouts/_navbar_navegation.html.erb
+++ b/app/views/layouts/_navbar_navegation.html.erb
@@ -6,7 +6,7 @@
               <div class="col-lg order-lg-first">
                 <ul class="nav nav-tabs border-0 flex-column flex-lg-row">
                   <li class="nav-item">
-                    <a href="<%= root_path%>" class="nav-link"><i class="fa fa-line-chart"></i> Dashboards</a>
+                    <a href="<%= dashboard_index_path%>" class="nav-link"><i class="fa fa-line-chart"></i> Dashboards</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a href="javascript:void(0)" class="nav-link" data-toggle="dropdown"><i class="fe fe-users"></i>Clientes</a>
