Novas alterações na venda

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,8 @@
  @import "tabler";
  @import "tabler/plugins/charts-c3/plugin.scss";
  @import "font-awesome";
+ @import "jquery-ui";
+
 
 
  my-nav{
