--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -1,14 +1,5 @@
 <%= simple_form_for  @cliente, defaults: {label_html: {class: 'form-title form'}}, html: {class: 'form-vertical', id: 'my_form'} do |f| %>
 
-<% content_for :oi do %>
-  <%= f.submit 'Salvar', class: 'btn btn-success btn-lg'%>
-      <%unless @cliente.new_record?%>
-            <%= link_to 'Remover', cliente_path(@cliente), method: :delete, "data-confirm": 'Remover cliente?', class: "btn btn-danger btn-lg", data: { toggle: "tooltip", placement: "top" },  title: 'Remover' %>
-      <% end %>
-      <%= link_to 'Voltar', :back, class: 'card-link' %>
-<% end %>
-
-
 <div class="row">
    <div class="col-md-12 col-sm-12 col-lg-12">
       <ul class="form-group list-unstyled">
@@ -90,6 +81,15 @@
                </div>
             </li>
          </ul>
+      </div>
+      <div class="col-md-12 col-sm-12 col-lg-12">
+         <div class="well pull-right"> 
+            <%= f.submit 'Salvar', class: 'btn btn-success btn-lg'%>
+            <%unless @cliente.new_record?%>
+               <%= link_to 'Remover', cliente_path(@cliente), method: :delete, "data-confirm": 'Remover cliente?', class: "btn btn-danger btn-lg", data: { toggle: "tooltip", placement: "top" },  title: 'Remover' %>
+            <% end %>
+            <%= link_to 'Voltar', :back, class: 'card-link' %>
+         </div>
       </div>
    </div>
 </div>
