--- a/app/views/clientes/edit.html.erb
+++ b/app/views/clientes/edit.html.erb
@@ -1,6 +1,3 @@
-
-<% ff = render 'form' %>
-
 <div class="col-md-12 col-sm-12 col-lg-12">
 
    <div class="d-flex bd-highlight">
@@ -12,17 +9,8 @@
             </h1>
          </div>
       </div>
-      <div class="p-2 bd-highlight">
-         <div class="page-header">
-            <h1 class="page-title">
-                <% if content_for? :oi %>
-                    <%= yield :oi %>
-                <% end %>
-            </h1>
-         </div>
-      </div>
    </div>
    </div>
 </div>
 
-<%= ff %>
+<%= render 'form' %>
