--- a/app/views/vendas/edit.html.erb
+++ b/app/views/vendas/edit.html.erb
@@ -3,7 +3,7 @@
       <div class="p-2 flex-grow-1 bd-highlight">
          <div class="page-header">
             <h1 class="page-title">
-                Nova Venda
+                Alterar Venda
             </h1>
          </div>
       </div>
